add listMetadata() method

--- a/force-app/main/default/classes/MetadataService.cls
+++ b/force-app/main/default/classes/MetadataService.cls
@@ -51,6 +51,7 @@ public class MetadataService {
         private String CallOptions_hns = 'CallOptions=http://soap.sforce.com/2006/04/metadata';
         private String AllOrNoneHeader_hns = 'AllOrNoneHeader=http://soap.sforce.com/2006/04/metadata';
         private String[] ns_map_type_info = new String[]{SOAP_M_URI, 'MetadataService'};
+
         public MetadataService.IReadResult readMetadata(String type_x,String[] fullNames) {
             MetadataService.readMetadata_element request_x = new MetadataService.readMetadata_element();
             request_x.type_x = type_x;
@@ -72,6 +73,29 @@ public class MetadataService {
             );
             response_x = response_map_x.get('response_x');
             return response_x.getResult();
+        }
+
+        public MetadataService.FileProperties[] listMetadata(MetadataService.ListMetadataQuery[] queries,Double asOfVersion) {
+            MetadataService.listMetadata_element request_x = new MetadataService.listMetadata_element();
+            request_x.queries = queries;
+            request_x.asOfVersion = asOfVersion;
+            MetadataService.listMetadataResponse_element response_x;
+            Map<String, MetadataService.listMetadataResponse_element> response_map_x = new Map<String, MetadataService.listMetadataResponse_element>();
+            response_map_x.put('response_x', response_x);
+            WebServiceCallout.invoke(
+              this,
+              request_x,
+              response_map_x,
+              new String[]{endpoint_x,
+              '',
+              SOAP_M_URI,
+              'listMetadata',
+              SOAP_M_URI,
+              'listMetadataResponse',
+              'MetadataService.listMetadataResponse_element'}
+            );
+            response_x = response_map_x.get('response_x');
+            return response_x.result;
         }
     }
     public class SessionHeader_element {
@@ -159,6 +183,57 @@ public class MetadataService {
         private String[] result_type_info = new String[]{'result',SOAP_M_URI,null,'1','1','false'};
         private String[] apex_schema_type_info = new String[]{SOAP_M_URI,'true','false'};
         private String[] field_order_type_info = new String[]{'result'};
+    }
+
+    public class listMetadata_element {
+        public MetadataService.ListMetadataQuery[] queries;
+        public Double asOfVersion;
+        private String[] queries_type_info = new String[]{'queries',SOAP_M_URI,null,'0','-1','false'};
+        private String[] asOfVersion_type_info = new String[]{'asOfVersion',SOAP_M_URI,null,'1','1','false'};
+        private String[] apex_schema_type_info = new String[]{SOAP_M_URI,'true','false'};
+        private String[] field_order_type_info = new String[]{'queries','asOfVersion'};
+    }
+    public class ListMetadataQuery {
+        public String folder;
+        public String type_x;
+        private String[] folder_type_info = new String[]{'folder',SOAP_M_URI,null,'0','1','false'};
+        private String[] type_x_type_info = new String[]{'type',SOAP_M_URI,null,'1','1','false'};
+        private String[] apex_schema_type_info = new String[]{SOAP_M_URI,'true','false'};
+        private String[] field_order_type_info = new String[]{'folder','type_x'};
+    }
+    public class listMetadataResponse_element {
+        public MetadataService.FileProperties[] result;
+        private String[] result_type_info = new String[]{'result',SOAP_M_URI,null,'0','-1','false'};
+        private String[] apex_schema_type_info = new String[]{SOAP_M_URI,'true','false'};
+        private String[] field_order_type_info = new String[]{'result'};
+    }
+    public class FileProperties {
+        public String createdById;
+        public String createdByName;
+        public DateTime createdDate;
+        public String fileName;
+        public String fullName;
+        public String id;
+        public String lastModifiedById;
+        public String lastModifiedByName;
+        public DateTime lastModifiedDate;
+        public String manageableState;
+        public String namespacePrefix;
+        public String type_x;
+        private String[] createdById_type_info = new String[]{'createdById',SOAP_M_URI,null,'1','1','false'};
+        private String[] createdByName_type_info = new String[]{'createdByName',SOAP_M_URI,null,'1','1','false'};
+        private String[] createdDate_type_info = new String[]{'createdDate',SOAP_M_URI,null,'1','1','false'};
+        private String[] fileName_type_info = new String[]{'fileName',SOAP_M_URI,null,'1','1','false'};
+        private String[] fullName_type_info = new String[]{'fullName',SOAP_M_URI,null,'1','1','false'};
+        private String[] id_type_info = new String[]{'id',SOAP_M_URI,null,'1','1','false'};
+        private String[] lastModifiedById_type_info = new String[]{'lastModifiedById',SOAP_M_URI,null,'1','1','false'};
+        private String[] lastModifiedByName_type_info = new String[]{'lastModifiedByName',SOAP_M_URI,null,'1','1','false'};
+        private String[] lastModifiedDate_type_info = new String[]{'lastModifiedDate',SOAP_M_URI,null,'1','1','false'};
+        private String[] manageableState_type_info = new String[]{'manageableState',SOAP_M_URI,null,'0','1','false'};
+        private String[] namespacePrefix_type_info = new String[]{'namespacePrefix',SOAP_M_URI,null,'0','1','false'};
+        private String[] type_x_type_info = new String[]{'type',SOAP_M_URI,null,'1','1','false'};
+        private String[] apex_schema_type_info = new String[]{SOAP_M_URI,'true','false'};
+        private String[] field_order_type_info = new String[]{'createdById','createdByName','createdDate','fileName','fullName','id','lastModifiedById','lastModifiedByName','lastModifiedDate','manageableState','namespacePrefix','type_x'};
     }
 
     public class Profile extends Metadata {
